// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressIndicator /> when complete matches its snapshot 1`] = `
<StyledCustomizedProgressIndicator
  ariaValueText="100% complete"
  className="y-progress-indicator"
  percentComplete={1}
/>
`;

exports[`<ProgressIndicator /> when incomplete matches its snapshot 1`] = `
<StyledCustomizedProgressIndicator
  ariaValueText="50% complete"
  className="y-progress-indicator y-progress-indicator__incomplete"
  percentComplete={0.5}
/>
`;

exports[`<ProgressIndicator /> with additional className matches its snapshot 1`] = `
<StyledCustomizedProgressIndicator
  ariaValueText="50% complete"
  className="y-progress-indicator y-progress-indicator__incomplete TEST_CLASS"
  percentComplete={0.5}
/>
`;
